--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -26,7 +26,7 @@ drush:
   default_alias: '${drush.aliases.local}'
 modules:
   local:
-    enable: [dblog, devel, seckit, views_ui]
+    enable: [views_ui]
     uninstall: [acsf, acquia_connector, shield]
   ci:
     enable: {  }
