--- a/docroot/.htaccess
+++ b/docroot/.htaccess
@@ -125,6 +125,7 @@ AddEncoding gzip svgz
   RewriteCond %{HTTP_HOST} !\.factory\.alshaya\.com$ [NC]
   # Don't redirect local dev sites.
   RewriteCond %{HTTP_HOST} !^local\. [NC]
+  RewriteCond %{HTTP_HOST} !\.site$ [NC]
   # Don't redirect on all *.hm.com domains.
   RewriteCond %{HTTP_HOST} !\.hm\.com$ [NC]
   RewriteRule ^ http%{ENV:protossl}://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
