--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -83,7 +83,7 @@ cm:
   strategy: none
 validate:
   twig:
-    functions: [alshaya_main_menu]
+    functions: [alshaya_main_menu, alshaya_secondary_main_menu]
 cloud:
   appId: f8ab35c4-f119-4acd-b080-d3014358e5b8
 # We must disable security checks for module updates until
