--- a/docroot/modules/custom/bazaar_voice/config/install/bazaar_voice.settings.yml
+++ b/docroot/modules/custom/bazaar_voice/config/install/bazaar_voice.settings.yml
@@ -9,6 +9,7 @@ bvpixel_base_url: 'https://apps.bazaarvoice.com/deployments'
 client_name: ''
 site_id: 'main_site'
 environment: 'staging'
+notify_comment_published: true
 pdp_rating_reviews: false
 myaccount_rating_reviews: false
 write_review_submission: false
