--- a/docroot/modules/react/package.json
+++ b/docroot/modules/react/package.json
@@ -21,6 +21,7 @@
     "@babel/runtime": "^7.8.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-rewire": "^1.2.0",
     "core-js": "^3.2.1",
     "eslint": "^6.8.0",
     "eslint-cli": "^1.1.1",
