CORE-30571: Replaced direct calls to services with dependency injection.

--- a/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.services.yml
+++ b/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.services.yml
@@ -17,3 +17,4 @@ services:
       - '@alshaya_acm_product.skumanager'
       - '@alshaya_acm_product.sku_images_manager'
       - '@request_stack'
+      - '@module_handler'
