CORE-30629: Add config to enable/disable feature and logout agent if location not shared.

--- a/docroot/modules/custom/alshaya_checkout_by_agent/config/install/alshaya_checkout_by_agent.settings.yml
+++ b/docroot/modules/custom/alshaya_checkout_by_agent/config/install/alshaya_checkout_by_agent.settings.yml
@@ -1,3 +1,4 @@
+checkout_by_agent_enabled: true # Config to enable/disable checkout by smart agent.
 smart_user_agents: []
 smart_agent_ips: ''
 whatsapp_template: ''
