CORE-30629: Update config and added a new js file to restrict agent login.

--- a/docroot/modules/custom/alshaya_checkout_by_agent/alshaya_checkout_by_agent.libraries.yml
+++ b/docroot/modules/custom/alshaya_checkout_by_agent/alshaya_checkout_by_agent.libraries.yml
@@ -6,3 +6,11 @@ smart_agent:
     - core/drupalSettings
     - core/jquery.once
     - core/jquery.cookie
+
+restrict_agent_login:
+  js:
+    js/restrict_agent_login.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery.once
+    - core/jquery.cookie
