CORE-30629: Add smart_agent library as dependeny.

--- a/docroot/modules/custom/alshaya_checkout_by_agent/alshaya_checkout_by_agent.libraries.yml
+++ b/docroot/modules/custom/alshaya_checkout_by_agent/alshaya_checkout_by_agent.libraries.yml
@@ -6,6 +6,7 @@ smart_agent:
     - core/drupalSettings
     - core/jquery.once
     - core/jquery.cookie
+    - alshaya_checkout_by_agent/smart_agent
 
 restrict_agent_login:
   js:
