CORE-30613: lhn status added to shop-by-brand api.

--- a/docroot/modules/custom/alshaya_options_list/alshaya_options_list.services.yml
+++ b/docroot/modules/custom/alshaya_options_list/alshaya_options_list.services.yml
@@ -11,6 +11,7 @@ services:
       - '@facets.manager'
       - '@module_handler'
       - '@cache.data'
+      - '@path.validator'
 
   alshaya_options_list.breadcrumb:
     class: Drupal\alshaya_options_list\Breadcrumb\AlshayaOptionsBreadcrumbBuilder
