--- a/docroot/modules/custom/alshaya_acm_checkout/config/install/alshaya_acm_checkout.settings.yml
+++ b/docroot/modules/custom/alshaya_acm_checkout/config/install/alshaya_acm_checkout.settings.yml
@@ -17,7 +17,7 @@ checkout_show_tax_info: false
 cod_surcharge_status: 1
 cod_surcharge_label: 'COD Service Charge'
 cod_surcharge_short_description: '[Additional [surcharge] Service Charge]'
-cod_surcharge_description: 'You pay for the merchandise upon delivery. <br>Cash on delivery orders will be charged an additional service charge of [surcharge] per order'
+cod_surcharge_description: 'You pay for the merchandise upon delivery. Cash on delivery orders will be charged an additional service charge of [surcharge] per order'
 cod_surcharge_tooltip: 'Tooltip to display the details of COD Service charge'
 exclude_payment_methods: { }
 cancel_reservation_enabled: 0
