CORE-30572: Added fields for howtouse and pass it to FE.

--- a/docroot/modules/brands/alshaya_tbs/modules/alshaya_tbs_transac/config/override/alshaya_acm_product.sku_base_fields.yml
+++ b/docroot/modules/brands/alshaya_tbs/modules/alshaya_tbs_transac/config/override/alshaya_acm_product.sku_base_fields.yml
@@ -98,3 +98,11 @@ fields:
     label: 'Technical Ingredients'
     type: 'text_long'
     description: 'Technical Ingredients'
+  howtouse_name:
+    label: 'How to use Name'
+    type: 'string'
+    description: 'How to use Name'
+  howtouse_description:
+    label: 'How to use Description'
+    type: 'text_long'
+    description: 'How to use Description'
