CORE-30613: Expose brand list page LHN for mobile app.

--- a/docroot/modules/custom/alshaya_mobile_app/alshaya_mobile_app.services.yml
+++ b/docroot/modules/custom/alshaya_mobile_app/alshaya_mobile_app.services.yml
@@ -19,6 +19,7 @@ services:
       - '@alshaya_acm_product.sku_info'
       - '@database'
       - '@alshaya_super_category.super_category_feature_manager'
+      - '@path.validator'
   alshaya_mobile_app.utility.paragraphs:
     class: Drupal\alshaya_mobile_app\Service\MobileAppUtilityParagraphs
     decorates: alshaya_mobile_app.utility
@@ -46,6 +47,7 @@ services:
       - '@plugin.manager.block'
       - '@database'
       - '@alshaya_super_category.super_category_feature_manager'
+      - '@path.validator'
   alshaya_mobile_app.alshaya_search_api_query_execute:
     class: Drupal\alshaya_mobile_app\Service\AlshayaSearchApiQueryExecute
     arguments:
