--- a/docroot/modules/brands/alshaya_we/modules/alshaya_we_transac/config/override/block.block.alshayasecondarymainmenu.yml
+++ b/docroot/modules/brands/alshaya_we/modules/alshaya_we_transac/config/override/block.block.alshayasecondarymainmenu.yml
@@ -14,4 +14,5 @@ plugin: alshaya_secondary_main_menu
 settings:
   id: alshaya_secondary_main_menu
   label: 'Alshaya secondary main menu'
+  label_display: '0'
 visibility: {  }
