CORE-30816: Added access check to alow only local development.

--- a/docroot/modules/react/alshaya_spc/alshaya_spc.services.yml
+++ b/docroot/modules/react/alshaya_spc/alshaya_spc.services.yml
@@ -62,6 +62,16 @@ services:
         needs_incoming_request: TRUE
         applies_to: _middleware_request_check
 
+  alshaya_spc.proxy_access_check:
+    class: Drupal\alshaya_spc\Proxy\ProxyAccessCheck
+    tags:
+      -
+        name: access_check
+        needs_incoming_request: TRUE
+        applies_to: _proxy_request_check
+    arguments:
+      - '@settings'
+
   alshaya_spc.stock_event_subscriber:
     class: Drupal\alshaya_spc\EventSubscriber\StockEventSubscriber
     tags:
