CORE-29941: Create a new queue to store OOS skus and a drush command to read and delete queue items.

--- a/docroot/modules/custom/alshaya_feed/drush.services.yml
+++ b/docroot/modules/custom/alshaya_feed/drush.services.yml
@@ -6,3 +6,10 @@ services:
       - '@alshaya_feed.generate'
     tags:
       - { name: drush.command }
+
+  alshaya_feed.manage_queue:
+    class: Drupal\alshaya_feed\Commands\AlshayaManageQueue
+    arguments:
+      - '@queue'
+    tags:
+      - { name: drush.command }
