CORE-30151: resolution of PR Review comments.

--- a/docroot/modules/custom/alshaya_secondary_main_menu/config/install/block.block.alshayasecondarymainmenu.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/config/install/block.block.alshayasecondarymainmenu.yml
@@ -8,10 +8,11 @@ dependencies:
 id: alshayasecondarymainmenu
 theme: alshaya_white_label
 region: header
-weight: -58
+weight: -50
 provider: null
 plugin: alshaya_secondary_main_menu
 settings:
   id: alshaya_secondary_main_menu
   label: 'Alshaya secondary main menu'
+  label_display: '0'
 visibility: {  }
