--- a/docroot/modules/custom/alshaya_secondary_main_menu/alshaya_secondary_main_menu.info.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/alshaya_secondary_main_menu.info.yml
@@ -23,4 +23,6 @@ dependencies:
   - drupal:text
   - drupal:user
   - drupal:views
+  - drupal:menu_item_extras
+  - drupal:conditional_fields
 package: Alshaya
