--- a/docroot/modules/custom/alshaya_secondary_main_menu/config/install/core.entity_view_display.menu_link_content.secondary-main-menu.default.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/config/install/core.entity_view_display.menu_link_content.secondary-main-menu.default.yml
@@ -16,5 +16,6 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_secondary_menu_highlight: true
   langcode: true
   search_api_excerpt: true
