--- a/docroot/modules/products/alshaya_furnitures/alshaya_furnitures.info.yml
+++ b/docroot/modules/products/alshaya_furnitures/alshaya_furnitures.info.yml
@@ -3,3 +3,5 @@ type: module
 description: 'The dedicated module for transac Furnitures brands.'
 package: Alshaya
 core: 8.x
+dependencies:
+  - alshaya_secondary_main_menu:alshaya_secondary_main_menu
