CORE-30613: Expose brand list page LHN for mobile app.

--- a/docroot/modules/custom/alshaya_acm_product_category/alshaya_acm_product_category.services.yml
+++ b/docroot/modules/custom/alshaya_acm_product_category/alshaya_acm_product_category.services.yml
@@ -11,6 +11,7 @@ services:
       - '@path.current'
       - '@database'
       - '@alshaya_acm_product.category_helper'
+      - '@module_handler'
 
   cache.product_category_tree:
     class: Drupal\Core\Cache\CacheBackendInterface
