--- a/docroot/modules/custom/alshaya_acm_product_category/modules/alshaya_super_category/alshaya_super_category.services.yml
+++ b/docroot/modules/custom/alshaya_acm_product_category/modules/alshaya_super_category/alshaya_super_category.services.yml
@@ -17,6 +17,7 @@ services:
       - '@config.factory'
       - '@path.alias_manager'
       - '@alshaya_acm_product.category_helper'
+      - '@module_handler'
 
   alshaya_super_category.super_category_feature_manager:
     class: Drupal\alshaya_super_category\AlshayaSuperCategoryManager
