CORE-29941: Add a drush command to delete oos sku across markets.

--- a/docroot/modules/custom/alshaya_feed/alshaya_feed.services.yml
+++ b/docroot/modules/custom/alshaya_feed/alshaya_feed.services.yml
@@ -43,6 +43,7 @@ services:
       - '@metatag.token'
       - '@database'
       - '@logger.channel.alshaya_feed'
+      - '@dynamic_yield.product_feed_api_wrapper'
 
   alshaya_feed.product_processed_event:
     class: Drupal\alshaya_feed\EventSubscriber\ProductProcessedEventSubscriber
