--- a/docroot/modules/custom/alshaya_secondary_main_menu/config/install/field.field.paragraph.secondary_promo_images.field_promo_image.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/config/install/field.field.paragraph.secondary_promo_images.field_promo_image.yml
@@ -19,7 +19,7 @@ skip_translation_check: 0
 default_value: {  }
 default_value_callback: ''
 settings:
-  file_directory: '[date:custom:Y]-[date:custom:m]'
+  file_directory: 'promo_img'
   file_extensions: 'png gif jpg jpeg'
   max_filesize: ''
   max_resolution: ''
