CORE-30864: Review comments resolution Round 3.

--- a/docroot/modules/custom/alshaya_secondary_main_menu/config/install/paragraphs.paragraphs_type.secondary_promo_images.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/config/install/paragraphs.paragraphs_type.secondary_promo_images.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: secondary_promo_images
-label: 'Secondary PROMO IMAGES'
+label: 'promotion image'
 icon_uuid: null
 description: ''
 behavior_plugins: {  }
