--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/alshaya_bathbodyworks.info.yml
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/alshaya_bathbodyworks.info.yml
@@ -115,3 +115,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/smart-agent/smart-agent.ltr.css: css/conditional-sass/smart-agent/smart-agent.ltr.css
+
+  alshaya_white_label/myaccount-reviews:
+    css:
+      theme:
+        css/conditional-sass/myaccount-reviews/myaccount-reviews.ltr.css: css/conditional-sass/myaccount-reviews/myaccount-reviews.ltr.css
