--- a/.lando.yml
+++ b/.lando.yml
@@ -8,7 +8,7 @@ config:
 
 services:
   database:
-    type: mariadb
+    type: mysql:5.7
     creds:
       user: drupal
       password: drupal
@@ -40,10 +40,7 @@ services:
     ssl: true
     config:
       vcl: .lando/config/varnish-4.vcl
-  memcache1:
-    type: memcached:1.5.11
-    mem: 64
-  memcache2:
+  memcache:
     type: memcached:1.5.11
     mem: 64
   pma:
@@ -63,6 +60,10 @@ proxy:
     - "*.varnish.alshaya.lndo.site"
   appserver:
     - "*.alshaya.lndo.site"
+  pma:
+    - "pma-alshaya.lndo.site"
+  mailhog:
+    - "mail-alshaya.lndo.site"
 
 tooling:
   blt:
