--- a/docroot/modules/custom/kaleyra/kaleyra.services.yml
+++ b/docroot/modules/custom/kaleyra/kaleyra.services.yml
@@ -5,3 +5,6 @@ services:
   kaleyra.whatsapp_api_adapter:
     class: Drupal\kaleyra\WhatsAppApiAdapter
     arguments: ['@http_client', '@config.factory', '@logger.factory']
+  kaleyra.shorten_url_api_adapter:
+    class: Drupal\kaleyra\ShortenUrlApiAdapter
+    arguments: ['@http_client', '@config.factory', '@logger.factory']
