--- a/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.libraries.yml
+++ b/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.libraries.yml
@@ -29,3 +29,8 @@ bvpixel_tracking:
 iovation:
   js:
     js/assets/iovation-loader.js: {}
+
+analytics:
+  js:
+    js/assets/featured-analytics.js: { scope: footer }
+    js/assets/passive-analytics.js: { scope: footer }
