--- a/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.routing.yml
+++ b/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.routing.yml
@@ -16,6 +16,12 @@ alshaya_bazaar_voice.uas_token:
     _controller: '\Drupal\alshaya_bazaar_voice\Controller\AlshayaBazaarVoiceController::getUasToken'
   requirements:
     _access: 'TRUE'
+alshaya_bazaar_voice.product_review_stats:
+  path: '/get-product-review-stats/{productId}'
+  defaults:
+    _controller: '\Drupal\alshaya_bazaar_voice\Controller\AlshayaBazaarVoiceController::getProductReviewStatistics'
+  requirements:
+    _access: 'TRUE'
 alshaya_bazaar_voice.user_reviews:
   path: '/user/{user}/reviews'
   defaults:
