--- a/.lando.yml
+++ b/.lando.yml
@@ -21,11 +21,12 @@ services:
     build_as_root:
       # Note that you will want to use the script for the major version of node you want to install
       # See: https://github.com/nodesource/distributions/blob/master/README.md#installation-instructions
-      - curl -sL https://deb.nodesource.com/setup_12.x | bash -
-      - apt-get install -y nodejs
+      - curl -sL https://deb.nodesource.com/setup_8.x | bash -
+      - apt-get update -y
+      - apt-get install nodejs -y
+      - apt-get install netcat -y
+      - apt-get install vim -y
     run_as_root:
-      - "apt-get update -y"
-      - "apt-get install netcat -y"
       # By default disable XDEBUG, we need it enabled to ensure all configurations are loaded.
       # Post this to enable disable lando xdebug-on and lando xdebug-off can be used.
       - rm /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini && service apache2 reload
