--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/kw/kw.yml
@@ -2,3 +2,5 @@ variables:
   spc_product_listing_page: '/shop-baby-clothing/new-arrivals/'
   spc_basket_page: '/shop-baby-clothing/new-arrivals/'
   product_listing_page_url: "/shop-baby-clothing/new-arrivals/"
+  np_plp_page: '/shop-toddler-clothing/new-arrivals/new-arrivals-for-girls/'
+  new_pdp_enabled: TRUE
