--- a/docroot/modules/custom/alshaya_config/alshaya_config.services.yml
+++ b/docroot/modules/custom/alshaya_config/alshaya_config.services.yml
@@ -8,8 +8,10 @@ services:
       - '@alshaya.alshaya_array_utils'
       - '@current_user'
       - '@logger.factory'
+      - '@cache.config_overrides'
     tags:
       - {name: event_subscriber}
+
   alshaya_config.manager:
     class: Drupal\alshaya_config\AlshayaConfigManager
     arguments:
@@ -23,3 +25,10 @@ services:
 
   alshaya.alshaya_array_utils:
     class: Drupal\alshaya_config\AlshayaArrayUtils
+
+  cache.config_overrides:
+    class: Drupal\Core\Cache\CacheBackendInterface
+    tags:
+      - { name: cache.bin }
+    factory: cache_factory:get
+    arguments: [config_overrides]
