--- a/docroot/modules/custom/alshaya_secondary_main_menu/config/install/field.field.menu_link_content.secondary-main-menu.field_add_highlights.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/config/install/field.field.menu_link_content.secondary-main-menu.field_add_highlights.yml
@@ -8,7 +8,7 @@ id: menu_link_content.secondary-main-menu.field_add_highlights
 field_name: field_add_highlights
 entity_type: menu_link_content
 bundle: secondary-main-menu
-label: 'If creating a Level 1 menu item, please check this box when you like to have a highlighted image on it. If checked a highlight image must be added and optionally a link, title and subtitle. When creating a Level 2 or Level 3 menu item this should not be checked'
+label: 'Add highlights if it is Level1 menu'
 description: ''
 required: false
 translatable: false
