--- a/docroot/modules/custom/alshaya_default_content/alshaya_default_content.info.yml
+++ b/docroot/modules/custom/alshaya_default_content/alshaya_default_content.info.yml
@@ -4,6 +4,7 @@ description: 'Default content to be created during install.'
 package: 'Alshaya'
 core: 8.x
 dependencies:
+  - drupal:content_moderation
   - alshaya_master:alshaya_master
   - alshaya_menus:alshaya_menus
   - alshaya_permissions:alshaya_permissions
