CORE-00: Try to fix install in travis and improve performance.

--- a/docroot/modules/custom/alshaya_advanced_page/alshaya_advanced_page.info.yml
+++ b/docroot/modules/custom/alshaya_advanced_page/alshaya_advanced_page.info.yml
@@ -3,6 +3,7 @@ type: module
 core: 8.x
 description: 'Advanced Page CT and related settings.'
 dependencies:
+  - alshaya_config:alshaya_config
   - alshaya_paragraphs:alshaya_paragraphs
   - drupal:block
   - block_field:block_field
