--- a/docroot/modules/custom/alshaya_config/alshaya_config.info.yml
+++ b/docroot/modules/custom/alshaya_config/alshaya_config.info.yml
@@ -4,3 +4,6 @@ description: 'Custom module to store site specific custom configurations.'
 package: 'Alshaya'
 core: 8.x
 configure: alshaya_config.settings
+
+dependencies:
+  - syslog:syslog
