--- a/docroot/modules/custom/alshaya_default_content/alshaya_default_content.info.yml
+++ b/docroot/modules/custom/alshaya_default_content/alshaya_default_content.info.yml
@@ -4,7 +4,9 @@ description: 'Default content to be created during install.'
 package: 'Alshaya'
 core: 8.x
 dependencies:
-  - drupal:content_moderation
+  - lightning_workflow:lightning_workflow
+  - alshaya_advanced_page:alshaya_advanced_page
+  - alshaya_config:alshaya_config
   - alshaya_master:alshaya_master
   - alshaya_menus:alshaya_menus
   - alshaya_permissions:alshaya_permissions
