--- a/.lando.yml
+++ b/.lando.yml
@@ -8,6 +8,7 @@ config:
 
 services:
   database:
+    app_mount: disabled
     type: mysql:5.7
     creds:
       user: drupal
@@ -65,6 +66,7 @@ services:
     hogfrom:
       - appserver
   solr:
+    app_mount: disabled
     type: solr:5.5
 
 proxy:
@@ -116,7 +118,12 @@ tooling:
     user: root
 
 excludes:
-  - vendor
+  - docroot/themes/custom/transac/node_modules
+  - docroot/themes/custom/non_transac/node_modules
+  - docroot/themes/custom/amp/node_modules
+  - docroot/themes/custom/transac_lite/node_modules
+  - docroot/modules/react/node_modules
+  - docroot/libraries
 
 events:
   post-start:
