--- a/docroot/modules/custom/rcs_placeholders/rcs_placeholders.services.yml
+++ b/docroot/modules/custom/rcs_placeholders/rcs_placeholders.services.yml
@@ -1,5 +1,9 @@
 services:
   Drupal\rcs_placeholders\Service\RcsPhPathProcessor:
     tags:
-      - { name: 'path_processor_inbound', priority: 80 }
+    # PathProcessorAlias has priority 100. So if we do processing more late,
+    # then the alias will not be available to us. Also priority of
+    # LanguageNegotiationUrl processor is 300, which removes the langcode from
+    # the url. So we need to keep priority between 100 and 300.
+      - { name: 'path_processor_inbound', priority: 101 }
     arguments: ['@entity_type.manager']
