CORE-31124: Removed redundant code and modified file name for the main JS file.

--- a/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
@@ -1,8 +1,7 @@
 main:
   js:
-    js/alshaya_rcs.js: {}
+    js/alshaya_rcs-exports.es5.js: {}
   dependencies:
     - core/jquery
     - core/drupalSettings
-    - rcs/main
     - rcs_magento/main
