--- a/docroot/modules/custom/alshaya_acm_product_category/modules/alshaya_super_category/alshaya_super_category.services.yml
+++ b/docroot/modules/custom/alshaya_acm_product_category/modules/alshaya_super_category/alshaya_super_category.services.yml
@@ -18,6 +18,7 @@ services:
       - '@path.alias_manager'
       - '@alshaya_acm_product.category_helper'
       - '@module_handler'
+      - '@theme.manager'
 
   alshaya_super_category.super_category_feature_manager:
     class: Drupal\alshaya_super_category\AlshayaSuperCategoryManager
