--- a/tests/behat/templates/variables/brands/bbw/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/uat/markets/ae/ae.yml
@@ -1,7 +1,7 @@
 variables:
-  spc_product_listing_page: '/shop-sale/'
-  spc_basket_page: '/shop-sale/'
-  product_listing_page_url: '/shop-sale/'
+  spc_product_listing_page: '/shop-shop-fragrance/'
+  spc_basket_page: '/shop-shop-fragrance/'
+  product_listing_page_url: '/shop-shop-fragrance/'
   spc_single_product_detail_page_coupon: '/buy-pink-gem-pocketbac-holder.html/'
   spc_multiple_product_detail_page_coupon: '/buy-japanese-cherry-blossom-bath-fizzy.html/'
   spc_single_product_detail_page_no_coupon: '/buy-magic-air-travel-size-shower-gel.html/'
