--- a/tests/behat/templates/variables/brands/hm/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/hm/env/uat/markets/ae/ae.yml
@@ -1,5 +1,5 @@
 variables:
   url_product_page: 'buy-slub-jersey-henley-shirt-green-grey-marl-0.html'
-  product_listing_page_url: '/shop-beauty/shop-product/eyes/'
-  spc_product_listing_page: '/shop-beauty/shop-product/eyes/'
-  spc_basket_page: '/shop-beauty/shop-product/eyes/'
+  product_listing_page_url: '/shop-lingerie/'
+  spc_product_listing_page: '/shop-lingerie/'
+  spc_basket_page: '/shop-lingerie/'
