--- a/tests/behat/templates/variables/brands/hm/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/hm/env/uat/markets/kw/kw.yml
@@ -1,5 +1,5 @@
 variables:
   url_product_page: 'buy-slub-jersey-henley-shirt-green-grey-marl-0.html'
-  product_listing_page_url: "/shop-divided-test/new-arrivals/"
-  spc_product_listing_page: '/shop-divided-test/new-arrivals/'
-  spc_basket_page: '/shop-divided-test/new-arrivals/'
+  product_listing_page_url: "/shop-lingerie/"
+  spc_product_listing_page: '/shop-lingerie/'
+  spc_basket_page: '/shop-lingerie/'
