--- a/tests/behat/templates/variables/brands/mc/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/mc/env/uat/markets/kw/kw.yml
@@ -1,4 +1,5 @@
 variables:
-  spc_product_listing_page: '/shop-bathing-care/shop-by-brand/cool-cool/'
-  spc_basket_page: '/shop-feeding/'
-  product_listing_page_url: "/shop-baby-clothing/baby-newborn-18-months/"
+  spc_product_listing_page: '/shop-baby-clothings/baby-newborn-18-months/jackets/'
+  spc_basket_page: '/shop-baby-clothings/baby-newborn-18-months/jackets/'
+  product_listing_page_url: '/shop-baby-clothings/baby-newborn-18-months/jackets/'
+  spc_plp_add_to_cart_single: '/shop-baby-clothings/baby-newborn-18-months/jackets/'
