CORE-29941: Add logger for all actions in code.

--- a/docroot/modules/custom/alshaya_feed/drush.services.yml
+++ b/docroot/modules/custom/alshaya_feed/drush.services.yml
@@ -12,5 +12,6 @@ services:
     arguments:
      - '@alshaya_feed.product_delta_feed'
      - '@config.factory'
+     - '@logger.factory'
     tags:
       - { name: drush.command }
