--- a/docroot/modules/custom/alshaya_secondary_main_menu/config/install/core.entity_form_display.menu_link_content.secondary-main-menu.default.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/config/install/core.entity_form_display.menu_link_content.secondary-main-menu.default.yml
@@ -2,6 +2,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.menu_link_content.secondary-main-menu.field_add_highlights
     - field.field.menu_link_content.secondary-main-menu.field_secondary_menu_highlight
     - system.menu.secondary-main-menu
   module:
@@ -13,9 +14,16 @@ targetEntityType: menu_link_content
 bundle: secondary-main-menu
 mode: default
 content:
+  field_add_highlights:
+    type: boolean_checkbox
+    weight: 3
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   field_secondary_menu_highlight:
     type: entity_reference_paragraphs
-    weight: 3
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -24,7 +32,23 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings:
-      conditional_fields: {  }
+      conditional_fields:
+        add-highlights:
+          dependee: field_add_highlights
+          settings:
+            state: visible
+            condition: checked
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              value: false
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: menu_link_content
+          bundle: secondary-main-menu
     region: content
   langcode:
     type: language_select
