--- a/docroot/modules/custom/alshaya_secondary_main_menu/config/install/core.entity_view_display.menu_link_content.secondary-main-menu.default.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/config/install/core.entity_view_display.menu_link_content.secondary-main-menu.default.yml
@@ -1,8 +1,8 @@
-uuid: c82d3856-9a9d-44ff-b859-85ad6c05ddc1
 langcode: en
 status: true
 dependencies:
   config:
+    - field.field.menu_link_content.secondary-main-menu.field_add_highlights
     - field.field.menu_link_content.secondary-main-menu.field_secondary_menu_highlight
     - system.menu.secondary-main-menu
 id: menu_link_content.secondary-main-menu.default
@@ -16,6 +16,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_add_highlights: true
   field_secondary_menu_highlight: true
   langcode: true
   search_api_excerpt: true
