CORE-31124: Added rendering engine files.

--- a/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
@@ -1,5 +1,6 @@
 main:
   js:
+    js/alshaya_rcs_renderer-exports.es5.js: {}
     js/alshaya_rcs-exports.es5.js: {}
   dependencies:
     - core/jquery
