--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "drupal/ckeditor_font": "^1.0",
         "drupal/clientside_validation": "^1.0-rc4",
         "drupal/components": "^1.0",
+        "drupal/config_rewrite": "^1.4",
         "drupal/core": "^8.8.12",
         "drupal/core-composer-scaffold": "^8.8.10",
         "drupal/datalayer": "^1.0@beta",
