--- a/docroot/middleware/config/routes.yaml
+++ b/docroot/middleware/config/routes.yaml
@@ -73,6 +73,11 @@ payment.payment_error:
   controller: App\Controller\PaymentController::handlePaymentFail
   methods: GET
 
+payment.bin_validation:
+  path: /payment/bin-validation
+  controller: App\Controller\PaymentController::handleBinValidation
+  methods: POST
+
 freegift.select_free_gift:
     path: /select-free-gift
     controller: App\Controller\FreeGiftController::selectFreeGift
