--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -483,3 +483,8 @@ smart-agent:
   css:
     theme:
       css/conditional-sass/smart-agent/smart-agent.ltr.css: {}
+
+secondary-menu:
+  css:
+    theme:
+      css/conditional-sass/secondary-menu/secondary-menu.ltr.css: {}
