--- a/docroot/themes/custom/transac/alshaya_westelm/alshaya_westelm.info.yml
+++ b/docroot/themes/custom/transac/alshaya_westelm/alshaya_westelm.info.yml
@@ -105,3 +105,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/smart-agent/smart-agent.ltr.css: css/conditional-sass/smart-agent/smart-agent.ltr.css
+
+  alshaya_white_label/secondary-menu:
+    css:
+      theme:
+        css/conditional-sass/secondary-menu/secondary-menu.ltr.css: css/conditional-sass/secondary-menu/secondary-menu.ltr.css
