CORE-31249: Fix variable names and create new controller for bin validation.

--- a/docroot/middleware/config/routes.yaml
+++ b/docroot/middleware/config/routes.yaml
@@ -73,9 +73,9 @@ payment.payment_error:
   controller: App\Controller\PaymentController::handlePaymentFail
   methods: GET
 
-payment.bin_validation:
-  path: /payment/bin-validation
-  controller: App\Controller\PaymentController::handleBinValidation
+card.bin_validation:
+  path: /card/bin-validation
+  controller: App\Controller\BinValidationController::handleBinValidation
   methods: POST
 
 freegift.select_free_gift:
