--- a/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
@@ -1,8 +1,7 @@
 main:
   js:
-    js/alshaya_rcs_renderer-exports.es5.js: {}
-    js/alshaya_rcs-exports.es5.js: {}
-    js/alshaya_rcs.js: {}
+    dist/main.js: {}
+    dist/alshaya_rcs.js: {}
   dependencies:
     - core/jquery
     - core/drupalSettings
