--- a/docroot/modules/custom/alshaya_rcs/package.json
+++ b/docroot/modules/custom/alshaya_rcs/package.json
@@ -2,31 +2,8 @@
   "name": "alshaya_rcs",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.8.4",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-rewire": "^1.2.0",
-    "eslint": "^6.8.0",
-    "eslint-cli": "^1.1.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7",
-    "webpack-stream": "^5.2.1"
-  },
   "scripts": {
-    "build:dev": "./node_modules/.bin/webpack --mode=development",
-    "build": "./node_modules/.bin/webpack",
-    "watch": "./node_modules/.bin/webpack --watch"
+    "build:dev": "../node_modules/.bin/webpack --mode=development",
+    "build": "../node_modules/.bin/webpack"
   }
 }
