CORE-31229: Broken image thumbnail is displayed on FE however no BE image is uploaded for L1 menu

--- a/docroot/modules/custom/alshaya_secondary_main_menu/config/install/system.menu.promo-menu.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/config/install/system.menu.promo-menu.yml
@@ -3,5 +3,5 @@ status: true
 dependencies: {  }
 id: promo-menu
 label: 'Promo Menu'
-description: ''
+description: 'We would recommend no more than 3 promo links should be added.'
 locked: false
