--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ drush/Commands
 
 # Ignore custom module build artifacts
 docroot/modules/custom/node_modules
+docroot/modules/custom/*/dist
 docroot/modules/react/node_modules
 docroot/modules/react/*/node_modules
 docroot/modules/react/*/dist
