--- a/docroot/modules/custom/alshaya_secondary_main_menu/config/install/system.menu.promo-menu.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/config/install/system.menu.promo-menu.yml
@@ -3,5 +3,5 @@ status: true
 dependencies: {  }
 id: promo-menu
 label: 'Promo Menu'
-description: 'We would recommend no more than 3 promo links should be added.'
+description: 'The recommendation is not to add more then three promotion links.'
 locked: false
