--- a/docroot/proxy/.htaccess
+++ b/docroot/proxy/.htaccess
@@ -2,10 +2,14 @@
 <IfModule mod_rewrite.c>
     Options -MultiViews
     RewriteEngine On
+
+    # Make sure Authorization HTTP header is available to PHP
+    # even when running as CGI or FastCGI.
+    RewriteRule ^ - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^(.*)$ index.php [QSA,L]
 </IfModule>
-
 <IfModule !mod_rewrite.c>
     <IfModule mod_alias.c>
         RedirectMatch 302 ^/$ /index.php/
