--- a/tests/behat/templates/variables/brands/bbw/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/uat/markets/sa/sa.yml
@@ -1,8 +1,8 @@
 variables:
   url_product_page: 'buy-slub-jersey-henley-shirt-green-grey-marl-0.html'
-  product_listing_page_url: "/shop-bodycare/"
-  spc_product_listing_page: '/shop-bodycare/'
-  spc_basket_page: '/shop-bodycare/'
+  product_listing_page_url: "/#query=fragrance/"
+  spc_product_listing_page: '/#query=fragrance/'
+  spc_basket_page: '/#query=fragrance/'
   governorate: ''
   spc_single_product_detail_page_coupon: '/buy-pink-gem-pocketbac-holder.html/'
   spc_multiple_product_detail_page_coupon: '/buy-japanese-cherry-blossom-bath-fizzy.html/'
