CORE-31124: Made translatable false for the pdp layout field.

--- a/docroot/modules/custom/alshaya_rcs/config/install/field.field.node.rcs_product.field_select_pdp_layout.yml
+++ b/docroot/modules/custom/alshaya_rcs/config/install/field.field.node.rcs_product.field_select_pdp_layout.yml
@@ -13,7 +13,7 @@ bundle: rcs_product
 label: 'Select PDP Layout'
 description: ''
 required: true
-translatable: true
+translatable: false
 skip_translation_check: false
 default_value: {  }
 default_value_callback: ''
