CORE-31407: Enable lpn module and add lpn attribute field.

--- a/docroot/modules/brands/alshaya_mu/modules/alshaya_mu_transac/config/override/alshaya_acm_product.sku_base_fields.yml
+++ b/docroot/modules/brands/alshaya_mu/modules/alshaya_mu_transac/config/override/alshaya_acm_product.sku_base_fields.yml
@@ -74,3 +74,6 @@ fields:
   white_glove_delivery:
     label: 'White Glove Delivery'
     type: 'string'
+  season_code:
+    label: 'Season Code'
+    type: 'string'
