--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/alshaya_bathbodyworks.info.yml
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/alshaya_bathbodyworks.info.yml
@@ -120,3 +120,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/myaccount-reviews/myaccount-reviews.ltr.css: css/conditional-sass/myaccount-reviews/myaccount-reviews.ltr.css
+
+  alshaya_white_label/style-review-stars:
+    css:
+      theme:
+        css/conditional-sass/style-review-stars/style-review-stars.ltr.css: css/conditional-sass/style-review-stars/style-review-stars.ltr.css
