CORE-31124: V2 integration for classic and magazine layout. Revert "Merge pull request #20975 from acquia-pso/revert-20829-CORE-31124-classic-magazine-v2"
This reverts commit a41da71cf96f94c4a77768b357398dac0bff7c1d, reversing
changes made to 7d5a16fa40f6955bf6c6ba5aa52387e66ed76d4f.

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "drupal/clientside_validation": "^1.0-rc4",
         "drupal/components": "^1.0",
         "drupal/conditional_fields": "^4.0@alpha",
+        "drupal/config_rewrite": "^1.4",
         "drupal/core": "^8.8.12",
         "drupal/core-composer-scaffold": "^8.8.10",
         "drupal/datalayer": "^1.0@beta",
