--- a/composer.json
+++ b/composer.json
@@ -116,7 +116,6 @@
         "endroid/qr-code": "^3.6",
         "hgoebl/mobile-detect": "^1.4.2",
         "jqueryvalidate/jqueryvalidate": "~1.0",
-        "mglaman/drupal-check": "^1.1",
         "mobiledetect/mobiledetectlib": "^2.8",
         "springimport/magento2-api-v1": "^1.0",
         "symfony/lock": "4.3.*"
@@ -126,7 +125,8 @@
         "drupal/core-dev": "^8.8.11",
         "drupal/devel": "^2.0.0",
         "geerlingguy/drupal-vm": "^5.2.0",
-        "jakoch/phantomjs-installer": "^2.1.1-p07"
+        "jakoch/phantomjs-installer": "^2.1.1-p07",
+        "mglaman/drupal-check": "^1.1"
     },
     "repositories": {
         "drupal": {
