CORE-31124: Added depencies to add to cart library and added it via node view.

--- a/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
@@ -19,4 +19,6 @@ add_to_cart:
   dependencies:
     - core/jquery
     - core/drupalSettings
+    - alshaya_rcs/renderer
+    - alshaya_rcs/backend
     - alshaya_acm_cart_notification/cart_notification_js
