--- a/tests/behat/templates/variables/brands/pb/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/pb/env/uat/markets/kw/kw.yml
@@ -1,4 +1,4 @@
 variables:
-  product_listing_page_url: '/shop-furniture/'
-  spc_product_listing_page: '/shop-furniture/'
-  spc_basket_page: '/shop-furniture/'
+  product_listing_page_url: '/shop-bedding/shop-category/duvet-covers-pillowcases/'
+  spc_product_listing_page: '/shop-bedding/shop-category/duvet-covers-pillowcases/'
+  spc_basket_page: '/shop-bedding/shop-category/duvet-covers-pillowcases/'
