--- a/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.info.yml
+++ b/docroot/modules/react/alshaya_bazaar_voice/alshaya_bazaar_voice.info.yml
@@ -3,6 +3,7 @@ type: module
 description: 'Provides integration with BazaarVoice.'
 package: 'Alshaya'
 core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - bazaar_voice:bazaar_voice
   - alshaya_react:alshaya_react
