CORE-31558: Custom themes - Removed deprecated code.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/alshaya_american_eagle.info.yml
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/alshaya_american_eagle.info.yml
@@ -2,6 +2,7 @@ name: Alshaya American Eagle Online
 type: theme
 description: 'Theme for American Eagle Online (Transactional).'
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: alshaya_white_label
 alshaya_theme_type: transac
 
