--- a/docroot/themes/custom/non_transac/bath_body_works/bath_body_works.info.yml
+++ b/docroot/themes/custom/non_transac/bath_body_works/bath_body_works.info.yml
@@ -2,6 +2,7 @@ name: Bath and Body Works
 description: Theme for Bath and Body Works.
 type: theme
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: whitelabel
 alshaya_theme_type: non_transac
 
