--- a/docroot/themes/custom/non_transac/bouchon_bakery/bouchon_bakery.info.yml
+++ b/docroot/themes/custom/non_transac/bouchon_bakery/bouchon_bakery.info.yml
@@ -2,6 +2,7 @@ name: Bouchon Bakery
 description: Theme for Bouchon Bakery.
 type: theme
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: whitelabel
 alshaya_theme_type: non_transac
 
