--- a/docroot/themes/custom/non_transac/justice/justice.info.yml
+++ b/docroot/themes/custom/non_transac/justice/justice.info.yml
@@ -2,6 +2,7 @@ name: Justice
 description: Theme for Justice.
 type: theme
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: whitelabel
 alshaya_theme_type: non_transac
 
