--- a/docroot/themes/custom/transac/alshaya_example_subtheme/alshaya_example_subtheme.info.yml
+++ b/docroot/themes/custom/transac/alshaya_example_subtheme/alshaya_example_subtheme.info.yml
@@ -2,6 +2,7 @@ name: Alshaya Example Subtheme
 type: theme
 description: 'Theme for Example brand (Transactional).'
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: alshaya_white_label
 alshaya_theme_type: transac
 
