--- a/docroot/themes/custom/transac/alshaya_mothercare/alshaya_mothercare.info.yml
+++ b/docroot/themes/custom/transac/alshaya_mothercare/alshaya_mothercare.info.yml
@@ -2,6 +2,7 @@ name: Alshaya Mothercare
 type: theme
 description: 'Theme for Alshaya Mothercare Brand.'
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: alshaya_white_label
 alshaya_theme_type: transac
 
