--- a/docroot/themes/custom/transac/alshaya_muji/alshaya_muji.info.yml
+++ b/docroot/themes/custom/transac/alshaya_muji/alshaya_muji.info.yml
@@ -2,6 +2,7 @@ name: Alshaya Muji
 type: theme
 description: 'Theme for Muji (Transactional).'
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: alshaya_white_label
 alshaya_theme_type: transac
 
