--- a/docroot/themes/custom/transac/alshaya_pottery_barn/alshaya_pottery_barn.info.yml
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/alshaya_pottery_barn.info.yml
@@ -2,6 +2,7 @@ name: Alshaya Pottery Barn
 type: theme
 description: 'Theme for Pottery Barn (Transactional).'
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: alshaya_white_label
 alshaya_theme_type: transac
 
