--- a/docroot/themes/custom/transac/alshaya_the_body_shop/alshaya_the_body_shop.info.yml
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/alshaya_the_body_shop.info.yml
@@ -2,6 +2,7 @@ name: Alshaya The Body Shop
 type: theme
 description: 'Theme for The Body Shop.'
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: alshaya_white_label
 alshaya_theme_type: transac
 
