--- a/docroot/themes/custom/transac/alshaya_victoria_secret/alshaya_victoria_secret.info.yml
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/alshaya_victoria_secret.info.yml
@@ -2,6 +2,7 @@ name: Alshaya Victoria Secret
 type: theme
 description: 'Theme for Victoria Secret (Transactional).'
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: alshaya_white_label
 alshaya_theme_type: transac
 
