--- a/docroot/themes/custom/transac/alshaya_westelm/alshaya_westelm.info.yml
+++ b/docroot/themes/custom/transac/alshaya_westelm/alshaya_westelm.info.yml
@@ -2,6 +2,7 @@ name: Alshaya West Elm
 type: theme
 description: 'Theme for West Elm (Transactional).'
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: alshaya_white_label
 alshaya_theme_type: transac
 
