--- a/docroot/themes/custom/transac_lite/kidzania/kidzania.info.yml
+++ b/docroot/themes/custom/transac_lite/kidzania/kidzania.info.yml
@@ -2,6 +2,7 @@ name: KidZania
 description: Theme for KidZania brands.
 type: theme
 core: 8.x
+core_version_requirement: ^8 || ^9
 base theme: cog
 alshaya_theme_type: alshaya_transac_lite
 
