--- a/docroot/modules/custom/alshaya_rcs/alshaya_rcs.info.yml
+++ b/docroot/modules/custom/alshaya_rcs/alshaya_rcs.info.yml
@@ -5,4 +5,4 @@ core: 8.x
 core_version_requirement: ^8 || ^9
 dependencies:
   - rcs_placeholders:rcs_placeholders
-  - rcs_magento:rcs_magento
+  - rcs_magento_placeholders:rcs_magento_placeholders
