--- a/docroot/modules/react/alshaya_spc/alshaya_spc.routing.yml
+++ b/docroot/modules/react/alshaya_spc/alshaya_spc.routing.yml
@@ -92,3 +92,17 @@ alshaya_spc.customer.token:
   methods: [POST]
   requirements:
     _role: 'authenticated'
+
+alshaya_spc.callback_payment_success:
+  path: '/spc/payment-callback/success'
+  defaults:
+    _controller: '\Drupal\alshaya_spc\Controller\AlshayaSpcPaymentCallbackController::success'
+  requirements:
+    _permission: 'access content'
+
+alshaya_spc.callback_payment_error:
+  path: '/spc/payment-callback/{method}/error'
+  defaults:
+    _controller: '\Drupal\alshaya_spc\Controller\AlshayaSpcPaymentCallbackController::error'
+  requirements:
+    _permission: 'access content'
