--- a/docroot/modules/custom/bazaar_voice/config/install/bazaar_voice.settings.yml
+++ b/docroot/modules/custom/bazaar_voice/config/install/bazaar_voice.settings.yml
@@ -11,6 +11,7 @@ site_id: 'main_site'
 environment: 'staging'
 notify_comment_published: true
 pdp_rating_reviews: false
+show_location_filter: true
 myaccount_rating_reviews: false
 myaccount_reviews_limit: 100
 write_review_submission: false
