--- a/tests/behat/templates/variables/brands/fl/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/fl/env/prod/markets/ae/ae.yml
@@ -2,3 +2,6 @@ variables:
   spc_product_listing_page: '/shop-mens/accessories/bags/'
   spc_basket_page: '/shop-mens/accessories/bags/'
   product_listing_page_url: '/shop-mens/accessories/bags/'
+  np_plp_product_page: '/buy-jordan-jumpman-classics-backpack-black-white-gym-red.html/'
+  np_plp_page: '/shop-mens/accessories/bags/'
+  new_pdp_enabled: TRUE
