--- a/docroot/modules/custom/alshaya_secondary_main_menu/config/install/field.field.paragraph.secondary_promo_images.field_image_title.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/config/install/field.field.paragraph.secondary_promo_images.field_image_title.yml
@@ -11,7 +11,7 @@ bundle: secondary_promo_images
 label: 'Image Title'
 description: ''
 required: true
-translatable: false
+translatable: true
 skip_translation_check: 0
 default_value: {  }
 default_value_callback: ''
