--- a/docroot/modules/custom/alshaya_secondary_main_menu/config/install/field.field.paragraph.secondary_promo_images.field_link_to_image.yml
+++ b/docroot/modules/custom/alshaya_secondary_main_menu/config/install/field.field.paragraph.secondary_promo_images.field_link_to_image.yml
@@ -13,7 +13,7 @@ bundle: secondary_promo_images
 label: 'Link To Image'
 description: ''
 required: true
-translatable: false
+translatable: true
 skip_translation_check: 0
 default_value: {  }
 default_value_callback: ''
