CORE-31581: Fixes for newPDP-KNET.

--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/ae/ae.yml
@@ -3,3 +3,6 @@ variables:
   spc_basket_page: '/shop-baby-clothing/new-arrivals/'
   product_listing_page_url: "/shop-baby-clothing/new-arrivals/"
   spc_promotion_listing_page: '/buy-little-star-top-and-leggings-set.html/'
+  np_plp_product_page: '/buy-multi-coloured-spot-zip-through-hoody.html/'
+  np_plp_page: '/shop-baby-clothing/new-arrivals/'
+  new_pdp_enabled: TRUE
