--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/sa.yml
@@ -1,5 +1,8 @@
 variables:
   url_product_page: 'buy-slub-jersey-henley-shirt-green-grey-marl-0.html'
-  spc_product_listing_page: '/shop-toys/activity-toys/cars-trains-construction-toys/'
-  spc_basket_page: '/shop-toys/activity-toys/cars-trains-construction-toys/'
+  spc_product_listing_page: '//shop-toddler-clothing/new-arrivals/new-arrivals-for-boys/'
+  spc_basket_page: '//shop-toddler-clothing/new-arrivals/new-arrivals-for-boys/'
   product_listing_page_url: '/shop-toys/activity-toys/cars-trains-construction-toys/'
+  np_plp_product_page: '/buy-green-polo-shirt.html/'
+  np_plp_page: '/shop-toddler-clothing/new-arrivals/new-arrivals-for-boys/'
+  new_pdp_enabled: TRUE
