--- a/docroot/themes/custom/transac/alshaya_the_body_shop/alshaya_the_body_shop.info.yml
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/alshaya_the_body_shop.info.yml
@@ -36,6 +36,11 @@ libraries-override:
       theme:
         css/ltr-print.css: css/rtl-print.css
 
+  alshaya_white_label/font-face:
+    css:
+      theme:
+        css/conditional-sass/font-face/font-face.ltr.css: css/conditional-sass/font-face/font-face.ltr.css
+
   alshaya_white_label/algolia_search:
     css:
       theme:
