--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -19,6 +19,7 @@ global_styles:
     - core/jquery.ui.tabs
     - core/jquery.cookie
     - mobile_number/element
+    - alshaya_white_label/font-face
     - alshaya_white_label/utils
     - core/drupal.dialog.ajax
     - alshaya_white_label/alshaya_image_lazy_load
@@ -42,6 +43,11 @@ rtl_print_styles:
   css:
     theme:
       css/rtl-print.css: {media: print}
+
+font-face:
+  css:
+    theme:
+      css/conditional-sass/font-face/font-face.ltr.css: { }
 
 unmask_password:
   js:
