--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/alshaya_bathbodyworks.info.yml
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/alshaya_bathbodyworks.info.yml
@@ -47,6 +47,11 @@ libraries-override:
       theme:
         css/ltr-print.css: css/rtl-print.css
 
+  alshaya_white_label/font-face:
+    css:
+      theme:
+        css/conditional-sass/font-face/font-face.ltr.css: css/conditional-sass/font-face/font-face.ltr.css
+
   alshaya_white_label/megamenu_inline_layout:
     css:
       theme:
