--- a/docroot/themes/custom/transac/alshaya_example_subtheme/alshaya_example_subtheme.info.yml
+++ b/docroot/themes/custom/transac/alshaya_example_subtheme/alshaya_example_subtheme.info.yml
@@ -26,7 +26,22 @@ libraries:
   - alshaya_white_label/ucfix
 
 libraries-override:
-  alshaya_white_label/magazine_attribute:
+  alshaya_white_label/ltr_print_styles:
     css:
       theme:
-        css/conditional-sass/magazine-layout/magazine-layout.ltr.css: css/conditional-sass/example-feature/example-feature.ltr.css
+        css/ltr-print.css: css/ltr-print.css
+
+  alshaya_white_label/rtl_print_styles:
+    css:
+      theme:
+        css/rtl-print.css: css/rtl-print.css
+
+  alshaya_white_label/font-face:
+    css:
+      theme:
+        css/conditional-sass/font-face/font-face.ltr.css: css/conditional-sass/font-face/font-face.ltr.css
+
+  alshaya_white_label/example-feature:
+    css:
+      theme:
+        css/conditional-sass/example-feature/example-feature.ltr.css: css/conditional-sass/example-feature/example-feature.ltr.css
