--- a/docroot/themes/custom/transac/alshaya_pottery_barn_kids/alshaya_pottery_barn_kids.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn_kids/alshaya_pottery_barn_kids.libraries.yml
@@ -12,3 +12,8 @@ rtl_styles:
   css:
     theme:
       css/rtl.css: {}
+
+font-face:
+  css:
+    theme:
+      css/conditional-sass/font-face/font-face.ltr.css: { }
