CORE-31893: Fix deprecated code for alshaya_feed module.

--- a/docroot/modules/custom/alshaya_feed/alshaya_feed.services.yml
+++ b/docroot/modules/custom/alshaya_feed/alshaya_feed.services.yml
@@ -13,6 +13,7 @@ services:
       - '@alshaya_feed.sku_info'
       - '@twig'
       - '@logger.channel.alshaya_feed'
+      - '@config.factory'
 
   alshaya_feed.sku_info:
     class: Drupal\alshaya_feed\AlshayaFeedSkuInfoHelper
