CORE-31918: Fix deprecated code for alshaya_mobile_app module.

--- a/docroot/modules/custom/alshaya_mobile_app/alshaya_mobile_app.services.yml
+++ b/docroot/modules/custom/alshaya_mobile_app/alshaya_mobile_app.services.yml
@@ -5,7 +5,7 @@ services:
       - '@cache.data'
       - '@language_manager'
       - '@request_stack'
-      - '@path.alias_manager'
+      - '@path_alias.manager'
       - '@entity_type.manager'
       - '@entity.repository'
       - '@alshaya_acm_product.skumanager'
@@ -33,7 +33,7 @@ services:
       - '@cache.data'
       - '@language_manager'
       - '@request_stack'
-      - '@path.alias_manager'
+      - '@path_alias.manager'
       - '@entity_type.manager'
       - '@entity.repository'
       - '@alshaya_acm_product.skumanager'
