CORE-30932: Created a separate endpoint to fetch algolia settings for PLP.

--- a/docroot/modules/react/alshaya_algolia_react/alshaya_algolia_react.routing.yml
+++ b/docroot/modules/react/alshaya_algolia_react/alshaya_algolia_react.routing.yml
@@ -23,3 +23,11 @@ alshaya_algolia_react.algolia_react_config_setting:
     _title: 'Algolia Configuration'
   requirements:
     _permission: 'administer site configuration'
+
+alshaya_algolia_react.get_plp_settings:
+  path: '/plp-settings'
+  defaults:
+    _controller: '\Drupal\alshaya_algolia_react\Controller\AlgoliaController::getPlpSettings'
+    _title: ''
+  requirements:
+    _permission: 'access content'
